# 36120-25SP-Group-20-AT3-App

./: Dockerfile  README.md  app.py  bitcoin_usd_proc.csv  github.txt  pyproject.toml  requirements.txt
app/: main.py
students/: student_25153673.py
