[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "crypto-price-predictor"
version = "1.0.0"
description = "FastAPI application that predicts next-day HIGH prices for a cryptocurrency."
authors = [{ name = "Justin Govanxa" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "scikit-learn==1.5.1",
    "pandas==2.2.2",
    "numpy",
    "joblib==1.4.2",
    "xgboost==2.1.0",
    "lightgbm==4.4.0",
    "hyperopt==0.2.7",
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "streamlit==1.36.0",
    "lime==0.2.0.1",
    "wandb==0.17.4",
    "jupyterlab==4.2.3"
]
