[project]
name = "36120-25sp-25224496-at3-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhishek Teotia(abhishek.teotia@student.uts.edu.au)"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (==2.2.2)",
    "jupyterlab (==4.4.4)",
    "scikit-learn (==1.5.1)",
    "streamlit (==1.36.0)",
    "plotly (==5.24.1)",
    "altair (==5.3.0)",
    "requests (==2.32.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
